changement photo profil

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="library-video-meta flex flex-center-v gap-5">
                     <div class="profil-picture">
-                        <img src="./assets/images/photptofiol.jpg" alt="">
+                        <img src="./assets/images/IMG_20211224_110246319.jpg" alt="">
                     </div>
                     <div class="video-meta">
                        <div class="video-title">Comment avoir un jolie teint</div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="library-video-meta flex flex-center-v gap-5">
                     <div class="profil-picture">
-                        <img src="./assets/images/licorne.jpg" alt="">
+                        <img src="./assets/images/olvia.jpg" alt="">
                     </div>
                     <div class="video-meta">
                        <div class="video-title">Contes de fée</div>
